# efi-

./: .gitignore  CMakeLists.txt  Makefile  PIDSelectionView.swift  README.md  build_windows.bat  demo_config.json
config/: demo_config.json
docs/: Additional_STM32_Modules.md  Android_Implementation.md  Arduino_Implementation.md  Bluetooth_Protocol.md  DTC_Database.txt  Data_Analysis_Guide.md  ESP32_Implementation.md  Network_Protocol.md  OBD2_Protocol_Deep_Dive.md  Qt_QML_Framework.md  SCTDeviceUpdater.md  STM32F427_Implementation.md  Security_Implementation.md  demo_guide.md  iOS_Implementation.md  quick_start.md
docs/tutorials/: README.md
include/: device_adapter.h  dtc_handler.h  j2534_interface.h  log_format_handler.h  obd2_core.h  performance_calc.h  realtime_monitor.h  sct_device.h  system_diagnostics.h
maui/: MauiProgram.cs  OBD2Tool.csproj
maui/Config/: brand_config.json
maui/Models/: OBDModels.cs
maui/Services/: AdvancedDataLoggerService.cs  BluetoothService.cs  FirmwareService.cs  HighPerformanceLogger.cs  LogExportService.cs  OBDService.cs  PerformanceService.cs  SimulatorService.cs
maui/ViewModels/: CashoutDashboardViewModel.cs  (+6 more)
scripts/: debug_cleanup.sh  install_dependencies.sh  run_demo.sh  telemetry_analyzer.py
src/: device_adapter.c  diagnostics.c  dtc_handler.c  j2534_interface.c  main.c  obd2_core.c  obd2_protocol.c  performance_calc.c  protocol_can.c  protocol_j1850.c  protocol_kwp2000.c  realtime_monitor.c  sct_device.c  system_diagnostics.c  telemetry_handler.cpp  video_capture.cpp
templates/: logger.a2l  logger.xdf
(+8 files in other folders)
